crates/test-generator/tests/snapshots/rust/test_generated_struct_item.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
struct TestStruct1 { field3: i32 }

AST:
(source_file
  (struct_item
    name: (type_identifier "TestStruct1")
    body: (field_declaration_list
      (field_declaration
        name: (field_identifier "field3")
        type: (primitive_type "i32")
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:8 to 1:19 }, name: "TestStruct1", definition_type: StructDefinition, scope_id: Some(0), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
        Definition { position: { 1:22 to 1:28 }, name: "field3", definition_type: StructFieldDefinition, scope_id: Some(0), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [],
    usage: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
