crates/test-generator/tests/snapshots/rust/test_generated_struct_pattern.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
if let Type2 { field4: x14 } = value8 { }

AST:
(source_file
  (expression_statement
    (if_expression
      condition: (let_condition
        pattern: (struct_pattern
          type: (type_identifier "Type2")
          (field_pattern
            name: (field_identifier "field4")
            pattern: (identifier "x14")
          )
        )
        value: (identifier "value8")
      )
      consequence: (block)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:24 to 1:27 }, name: "x14", definition_type: VariableDefinition, scope_id: Some(1), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [],
    usage: [
        Usage { position: { 1:8 to 1:13 }, name: "Type2", kind: TypeIdentifier, context: None },
        Usage { position: { 1:16 to 1:22 }, name: "field4", kind: FieldInitializer, context: Some("field_initializer") },
        Usage { position: { 1:24 to 1:27 }, name: "x14", kind: Identifier, context: None },
        Usage { position: { 1:32 to 1:38 }, name: "value8", kind: Identifier, context: None },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
