crates/test-generator/tests/snapshots/rust/test_generated_token_repetition_pattern.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
macro_rules! test_macro { ($($item:ident),*) => { $(let $item = 42;)* }; }

AST:
(source_file
  (macro_definition
    name: (identifier "test_macro")
    (macro_rule
      left: (token_tree_pattern
        (token_repetition_pattern
          (token_binding_pattern
            name: (metavariable)
            type: (fragment_specifier)
          )
        )
      )
      right: (token_tree
        (token_repetition
          (metavariable)
          (integer_literal "42")
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:14 to 1:24 }, name: "test_macro", definition_type: MacroDefinition, scope_id: Some(0), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
        Definition { position: { 1:30 to 1:35 }, name: "$item", definition_type: MacroVariableDefinition, scope_id: Some(0), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [],
    usage: [
        Usage { position: { 1:14 to 1:24 }, name: "test_macro", kind: Identifier, context: None },
        Usage { position: { 1:30 to 1:35 }, name: "$item", kind: Metavariable, context: None },
        Usage { position: { 1:57 to 1:62 }, name: "$item", kind: Metavariable, context: None },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
