crates/test-generator/tests/snapshots/rust/test_generated_token_tree_pattern.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
macro_rules! test_macro1 { ({ $($content:tt)* }) => { $($content)* }; }

AST:
(source_file
  (macro_definition
    name: (identifier "test_macro1")
    (macro_rule
      left: (token_tree_pattern
        (token_tree_pattern
          (token_repetition_pattern
            (token_binding_pattern
              name: (metavariable)
              type: (fragment_specifier)
            )
          )
        )
      )
      right: (token_tree
        (token_repetition
          (metavariable)
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:14 to 1:25 }, name: "test_macro1", definition_type: MacroDefinition, scope_id: Some(0), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
        Definition { position: { 1:33 to 1:41 }, name: "$content", definition_type: MacroVariableDefinition, scope_id: Some(0), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [],
    usage: [
        Usage { position: { 1:14 to 1:25 }, name: "test_macro1", kind: Identifier, context: None },
        Usage { position: { 1:33 to 1:41 }, name: "$content", kind: Metavariable, context: None },
        Usage { position: { 1:57 to 1:65 }, name: "$content", kind: Metavariable, context: None },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
