crates/test-generator/tests/snapshots/rust/test_generated_trait_item.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
trait TestTrait1 { fn method1(&self) -> i32; }

AST:
(source_file
  (trait_item
    name: (type_identifier "TestTrait1")
    body: (declaration_list
      (function_signature_item
        name: (identifier "method1")
        parameters: (parameters
          (self_parameter
            (self "self")
          )
        )
        return_type: (primitive_type "i32")
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:7 to 1:17 }, name: "TestTrait1", definition_type: TypeDefinition, scope_id: Some(1), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
        Definition { position: { 1:23 to 1:30 }, name: "method1", definition_type: FunctionDefinition, scope_id: Some(1), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [],
    usage: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
