crates/test-generator/tests/snapshots/rust/test_generated_tuple_pattern.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
let (x15, y4) = tuple_val;

AST:
(source_file
  (let_declaration
    pattern: (tuple_pattern
      (identifier "x15")
      (identifier "y4")
    )
    value: (identifier "tuple_val")
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "x15",
            position: Position {
                start_line: 1,
                start_column: 6,
                end_line: 1,
                end_column: 9,
            },
            definition_type: VariableDefinition,
        },
        Definition {
            name: "y4",
            position: Position {
                start_line: 1,
                start_column: 11,
                end_line: 1,
                end_column: 13,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "tuple_val",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 17,
                end_line: 1,
                end_column: 26,
            },
            context: None,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
