crates/test-generator/tests/snapshots/rust/test_generated_tuple_struct_pattern.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
if let Point(x16, y5) = point_val { }

AST:
(source_file
  (expression_statement
    (if_expression
      condition: (let_condition
        pattern: (tuple_struct_pattern
          type: (identifier "Point")
          (identifier "x16")
          (identifier "y5")
        )
        value: (identifier "point_val")
      )
      consequence: (block)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:14 to 1:17 }, name: "x16", definition_type: VariableDefinition, scope_id: Some(1), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
        Definition { position: { 1:19 to 1:21 }, name: "y5", definition_type: VariableDefinition, scope_id: Some(1), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [],
    usage: [
        Usage { position: { 1:8 to 1:13 }, name: "Point", kind: Identifier, context: None },
        Usage { position: { 1:25 to 1:34 }, name: "point_val", kind: Identifier, context: None },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
