crates/test-generator/tests/snapshots/rust/test_generated_tuple_type.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
let tuple: (i32, String) = (42, "test".to_string());

AST:
(source_file
  (let_declaration
    pattern: (identifier "tuple")
    type: (tuple_type
      (primitive_type "i32")
      (type_identifier "String")
    )
    value: (tuple_expression
      (integer_literal "42")
      (call_expression
        function: (field_expression
          value: (string_literal ""test""
            (string_content)
          )
          field: (field_identifier "to_string")
        )
        arguments: (arguments)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:5 to 1:10 }, name: "tuple", definition_type: VariableDefinition, scope_id: Some(0), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [],
    usage: [
        Usage { position: { 1:18 to 1:24 }, name: "String", kind: TypeIdentifier, context: None },
        Usage { position: { 1:33 to 1:49 }, name: "to_string", kind: FieldExpression, context: Some("field_expression") },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
